syntax = "proto3";

package user;

option go_package = "api-gateway/proto/user;user";

service UserService {
  rpc RegisterUser (UserRequest) returns (UserResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc GetUserProfile (UserID) returns (UserProfile);
}

message UserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string userId = 1;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message UserID {
  string id = 1;
}

message UserProfile {
  string name = 1;
  string email = 2;
}
